fixtures/type_errors/bad_tuple_element_3.tl
f : (Int, Bool) { True }
---
Error:

fixtures/type_errors/bad_tuple_element_3.tl:
   1: f : (Int, Bool) { True }
                        ^^^^
                         expected this to have the type (Int, Bool) but it actually has the type Bool
